# GlobalNetworkCodes

./: .gitignore  CMakeLists.txt  README.md  setup.sh
app/: CMakeLists.txt
app/include/app/: icon_delegate.h  operator_model_tree.h  styled_delegate_country_operator.h
app/resources/: resources.qrc
app/src/: icon_delegate.cpp  operator_model_tree.cpp  window_app.cpp
core/include/core/: type.h
core/src/: db_connector.cpp
